fix(console): page layout issues

--- a/packages/console/src/pages/Connectors/index.module.scss
+++ b/packages/console/src/pages/Connectors/index.module.scss
@@ -9,6 +9,11 @@
 .tabs {
   margin: _.unit(4) _.unit(6) 0;
   margin-bottom: _.unit(5);
+  padding: _.unit(6) _.unit(6) 0;
+}
+
+.tabs {
+  margin: _.unit(4) _.unit(6) 0;
 }
 
 .table {
